電影院網站

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div id="root3"></div>
       <div id="root4"></div>
       <div id="root5"></div>
+      <div id="root6"></div>
     </div>
     <!-- <script type="module" src="/src/main.jsx"></script> -->
     <!-- <script type="module" src="/src/test/index.jsx"></script> -->
@@ -22,6 +23,7 @@
     <!-- <script type="module" src="/src/test/index2.jsx"></script> -->
     <!-- <script type="module" src="/src/test/index3.jsx"></script> -->
     <!-- <script type="module" src="/src/test/ToDo測試/index4.jsx"></script> -->
-    <script type="module" src="/src/test/ToDo代辦事項/index5.jsx"></script>
+    <!-- <script type="module" src="/src/test/ToDo代辦事項/index5.jsx"></script> -->
+    <script type="module" src="/src/test/電影院網站/index6.jsx"></script>
   </body>
 </html>
